# intervals-mcp

./: .gitignore  README.md  exceptions.py  main.py  pyproject.toml  server.py  setup.py
AI/api_docs/: HOW_TO_USE_DOCS.md  intervals.json
AI/prompts/: API_EXPLORATION_AGENT_PROMPT.md
config/: settings.py
services/: activities_service.py  wellness_service.py
tests/: conftest.py  test_config.py  test_exceptions.py  test_services.py  test_transformers.py
tools/: activities.py  wellness.py
transformers/: activities_transformer.py  wellness_transformer.py
utils/: api_decorators.py  intervals_client.py  logging.py
